--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
   </footer>
 
 
-  <script src="/assets/js/main.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/main.js"></script>
 </body>
 
 </html>
