add single post page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,27 +3,7 @@
 {% include head.html %}
 
 <body>
-  <div class="header">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-lg-4">
-          <h1>
-            <a href="index.html">
-              Afikur
-            </a>
-          </h1>
-        </div>
-        <div class="col-xs-12 col-lg-8">
-          <nav>
-            <a href="page.html">Docker</a>
-            <a href="#">Kubernetes</a>
-            <a href="#">Java</a>
-            <a href="#">JavaScript</a>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </div>
+  {% include header.html %}
   <section class="featured-posts">
     <div class="container">
       <div class="row">
