--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/flexboxgrid.css" />
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/flexboxgrid.min.2433236a.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.064b0fe7.css" />
 </head>
