--- a/_includes/recent-posts.html
+++ b/_includes/recent-posts.html
@@ -1,42 +1,31 @@
 {% for post in site.posts %}
-<div class="row">
-  <div class="col-lg-12">
-    <div class="post post-row">
-      <a href="" class="post-image"
-        style="background-image: url('https://colorlib.com/preview/theme/webmag/img/post-6.jpg');">
-        <!-- <img src="https://colorlib.com/preview/theme/webmag/img/post-6.jpg" alt="" /> -->
-      </a>
-
-
-      <div class="post-body">
-        <div class="post-meta">
-          {% for category in post.categories %}
-          <a href="#" class="post-category">{{category}}</a>
-          {% endfor%}
-          <span class="post-date">{{post.date | date: "%B %-d, %Y"}}</span>
-        </div>
-        <h3 class="post-title">
-          <a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
-        </h3>
-        <div class="post-content">
-          <p>
-            {{ post.content | split:'<!--break-->' | first }}
-          </p>
-        </div>
-        {% if post.content contains '<!--break-->' %}
-        <div class="read-more">
-          <a href="{{ site.baseurl }}/{{ post.url }}">Read more</a>
-        </div>
-        {% endif %}
-
-      </div>
-      <!--/post-body-->
-
-
+<div class="blog-card">
+  <a class="meta" href="">
+    <div class="photo"
+      style="background-image: url(https://storage.googleapis.com/chydlx/codepen/blog-cards/image-1.jpg)"></div>
+  </a>
+  <div class="description">
+    <div class="post-meta">
+      {% for category in post.categories %}
+      <a href="#" class="post-category">{{category}}</a>
+      {% endfor%}
+      <span class="post-date">{{post.date | date: "%B %-d, %Y"}}</span>
     </div>
-    <!--/.post-->
+    <h3 class="post-title">
+      <a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
+    </h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad
+      eum dolorum architecto obcaecati enim dicta praesentium, quam
+      nobis! Neque ad aliquam facilis numquam. Veritatis, sit.
+    </p>
+    {{ post.content | split:'<!--break-->' | first }}
+
+    {% if post.content contains '<!--break-->' %}
+    <p class="read-more">
+      <a href="{{ site.baseurl }}/{{ post.url }}">Read more</a>
+    </p>
+    {% endif %}
   </div>
-  <!--/.col-lg-12-->
 </div>
-<!--/.row-->
 {% endfor %}
