--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,11 +65,12 @@
 
   <section class="recent-posts">
     <div class="container">
+      <h1>Recent Posts</h1>
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-sm-8 col-xs-12">
           {% include recent-posts.html %}
         </div>
-        <div class="col-lg-4">
+        <div class="col-sm-4 col-xs-12">
           {% include category-widget.html %}
         </div>
       </div>
@@ -81,7 +82,7 @@
   </footer>
 
 
-  <script src="{{ site.baseurl }}/assets/js/main.js"></script>
+  <script src="{{ site.baseurl }}/assets/js/main.07704331.js"></script>
 </body>
 
 </html>
