--- a/_includes/category-widget.html
+++ b/_includes/category-widget.html
@@ -4,18 +4,13 @@
   </div>
   <div class="widget-body category-widget">
     <ul>
+      {% for category in site.categories %}
+      {% if category[0] != 'pinned' %}
       <li>
-        <a href="#">Docker <span>999</span> </a>
+        <a href="#">{{category[0]}} <span>{{category[1].size}}</span> </a>
       </li>
-      <li>
-        <a href="#">Kubernetes <span>9</span></a>
-      </li>
-      <li>
-        <a href="#">Java <span>18</span></a>
-      </li>
-      <li>
-        <a href="#">JavaScript <span>99</span></a>
-      </li>
+      {% endif %}
+      {% endfor %}
     </ul>
   </div>
 </div>
