--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Document</title>
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/flexboxgrid.min.2433236a.css" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/monokai.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.064b0fe7.css" />
 </head>
